--- a/p.html
+++ b/p.html
@@ -227,5 +227,23 @@ document.addEventListener('DOMContentLoaded', function() {
   link.textContent = window.location.hostname + "/p.html?id=" + id  ;
   </script>
 
+
+<div style="margin-top:50px">
+    <!-- AADS -->
+    <iframe data-aa='2328452' src='//ad.a-ads.com/2328452?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+      <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+<!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4871586,4,8,210,40,00000001']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4871586&101" alt="counter" border="0"></a></noscript>
+<!-- Histats.com  END  -->
+</div>
 </body>
 </html>
