--- a/terbaru.html
+++ b/terbaru.html
@@ -186,6 +186,10 @@
     <!-- AADS -->
     <iframe data-aa='2328452' src='//ad.a-ads.com/2328452?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
     <br>
+
+    <!-- EVADAV POPUNDER -->
+    <script async src="https://jyzkut.com/p/waWQiOjExNzAxMzksInNpZCI6MTM1MjgwOCwid2lkIjo1ODIyNzQsInNyYyI6Mn0=eyJ.js"></script>
+
       <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
