--- a/p.html
+++ b/p.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>hepi aja</title>
+  <title>ipul tampan</title>
   <!-- Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="global.css">
@@ -24,9 +24,9 @@
 <body>
 
   <!-- Navbar -->
-  <h5 class="purple darken-3 white-text z-depth-3"
+  <h5 class="black darken-3 white-text z-depth-3"
   style="margin-top: 0px; padding: 5px; text-align: center;">
-  Pengen Bo
+  Saepul
   </h5>
 
  <div class="container">
@@ -241,40 +241,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 <div style="margin-top:50px">
-    <!-- AADS -->
-    <iframe data-aa='2328452' src='//ad.a-ads.com/2328452?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
-
-    <!-- EVADAV POPUNDER -->
-    <script async src="https://jyzkut.com/p/waWQiOjExNzAxMzksInNpZCI6MTM1MjgwOCwid2lkIjo1ODIyNzQsInNyYyI6Mn0=eyJ.js"></script>
-
-
-    <!-- Notif -->
-    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-<script>
-  window.OneSignalDeferred = window.OneSignalDeferred || [];
-  OneSignalDeferred.push(async function(OneSignal) {
-    await OneSignal.init({
-      appId: "ce01c416-b004-4b4a-992f-20a91ea4f739",
-    });
-  });
-</script>
-
-
-
-
-      <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
-<!-- Histats.com  START  (aync)-->
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4871586,4,8,210,40,00000001']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4871586&101" alt="counter" border="0"></a></noscript>
-<!-- Histats.com  END  -->
+   
 </div>
 </body>
 </html>
