--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <link rel="stylesheet" href="global.css">
+  <!-- CLiaine -->
+  <meta name="clickaine-site-verification" content="8b361cc1cb49fd912b9334d2d180e4d82865953a30c6823e73e371a1418e3364c9d42e27eef01cfd08e2cbd45527dd796ead7415ad876da6757d47f19c47d78a">
   <style>
     .card-image img {
       height: 200px; 
