--- a/p.html
+++ b/p.html
@@ -241,6 +241,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 <div style="margin-top:50px">
+   <!-- onclicka popunder -->
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="200915"></script>
    
 </div>
 </body>
