--- a/terbaru.html
+++ b/terbaru.html
@@ -182,7 +182,9 @@
   </script>
 
   <div style="margin-top:50px">
-
+<!-- onclicka popunder -->
+    <script async src="https://js.onclckmn.com/static/onclicka.js" data-admpid="200915"></script>
+   
 </div>
 
 </body>
