--- a/cari.html
+++ b/cari.html
@@ -140,7 +140,7 @@
                     <div class="container">
                       <span class="pink-text darken-3 bold-text">${truncateText(result.title,40)}</span>
                     </div>
-                    <div style="display:flex;justify-content:end;margin-top:20px">
+                    <div style="display:flex;justify-content:end;margin:5px">
                       <button onclick="openvideo('${result.file_code}')" class="btn waves waves-effect pink">Nonton</button>
                     </div>
                   </div>
