--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <link rel="stylesheet" href="global.css">
-  <!-- CLiaine -->
-  <meta name="clickaine-site-verification" content="8b361cc1cb49fd912b9334d2d180e4d82865953a30c6823e73e371a1418e3364c9d42e27eef01cfd08e2cbd45527dd796ead7415ad876da6757d47f19c47d78a">
+ 
   <style>
     .card-image img {
       height: 200px; 
@@ -22,9 +21,9 @@
 <body>
 
   <!-- Navbar -->
-  <h5 class="black darken-3 white-text z-depth-3"
+  <h5 class="black darken-3 bold-text white-text z-depth-3"
   style="margin-top: 0px; padding: 5px; text-align: center;">
-  Saepul
+  Saepul Ganteng
   </h5>
 
   <div class="container">
@@ -123,7 +122,7 @@
                       <div class="container">
                         <span class="pink-text darken-3 bold-text">${truncatedTitle}</span>
                       </div>
-                      <div style="display:flex;justify-content:end;margin-top:20px">
+                      <div style="display:flex;justify-content:end;margin:5px">
                        <button onclick="openvideo('${file.file_code}')" class="btn waves waves-effect pink">Nonton</button>
                       </div>
                     </div>
