--- a/p.html
+++ b/p.html
@@ -10,15 +10,7 @@
   <script src="config.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style>
-  .overlayads{
-    margin-top: 5px;
-  position: absolute;
-  height: 330px;
-  background-color: red;
-  opacity: 0;
-  width: 100%;
-  z-index: 1000;
-}
+ 
 </style>
 </head>
 <body>
@@ -42,11 +34,9 @@
  </div>
 
 
- <!-- ads -->
- <div class="overlayads"></div>
 
   <div id="loadingframe" style="display: block;">
-    <h6 style="text-align: center;font-weight: bold;">Sabar Sedang Mencari Video Sebentar ....</h6>
+    <h6 style="text-align: center;font-weight: bold;"> Sedang Mencari Video bentar bos...</h6>
   </div>
 
   <!-- Iframe -->
@@ -55,29 +45,21 @@
   allowfullscreen
   allowscrolling="no" 
   onload="hideLoadingFrame()"
+    sandbox="allow-same-origin allow-scripts"
   ></iframe>
 
-  <div class="container">
-    <p class="red-text bold-text">
-      <span class="red white-text" style="padding: 3px;">Cara Nonton nya </span> : Pastikan Lu Pake Chrome jangan Nonton dari Facebook . Copas aja link nya . copas dan nonton di chrome . atau copas ini 
-      <a href="#" id="myLink" target="_blank" 
-     class="blue-text  darken-3 bold-text" 
-      ></a>
-       kalo udah Kalo lu Play video ke Buka Web Iklan 
-    lu Back aja . tombol back dari Hp Lu Biar Balik lagi ke Web b0cep Ini lagi . Intinya Kalo Kebuka Web Iklan Aneh Aneh Lu Back aja . itu iklan soalnya . biar balik ke web ini lagi . begitu trus sampe bisa lu tonton</p>
-
-
+  <div class="container" style="margin-top: 10px">
     <a  target="_blank" id="urldownload"
     style="width:100%" 
     class="btn waves waves-effect pink bold-text" 
-    >Download</a>
-    <p class="red-text bold-text">
-      <span class="red white-text" style="padding: 3px;">Cara Download nya nya </span> :
-      Pastikan Video nya bisa ditonton sebelum lu Download.
-    ntar Kena ZONK . dan Lewatin iklan nya kalo berhasil
-  lu masuk halaman Download nya . scroll ke bawah klik tombol Download warna oren </p>
+    >Download Video </a>
+    <p class="center-align bold-text red-text">Lewatin Iklan shortlink kalo mau Download Video</p>
   </div>
 
+
+  <div class="container">
+    <h5 class="bold-text">Video Lainnya </h5>
+  </div>
 
   <!-- RELATED -->
   <div id="preloader" style="margin-top:30px">
@@ -95,14 +77,12 @@
         </div>
       </div>
       </div>
-      <h6 style="font-weight: bold;text-align: center;">Sedang Mencari Video.....</h6>
+      <h6 style="font-weight: bold;text-align: center;">Sedang Mencari Video... <br>Refresh Web kalo lama</h6>
     </div>
 
 
   <div style="margin-top:10px">
-    <div class="container">
-    <h5 class="bold-text">Video Lainnya </h6>
-    </div>
+    
     <div class="row" id="cards-container">
       <!-- Cards will be inserted here dynamically -->
     </div>
@@ -135,7 +115,7 @@
     if (id) {
       var iframe = document.getElementById('myIframe');
       var download_url = document.getElementById('urldownload');
-      iframe.src = frame_domain + "/e/" + id;
+      iframe.src = "https://9xplayer.com/?url=" + frame_domain + "/e/" + id;
       download_url.href = shortlink_domain + shortlink_token + shortlink_tujuan +  frame_domain + "/d/" + id;
     }
 
@@ -181,7 +161,7 @@
                       <div class="container">
                         <span class="pink-text darken-3 bold-text">${truncatedTitle}</span>
                       </div>
-                      <div style="display:flex;justify-content:end;margin-top:20px">
+                      <div style="display:flex;justify-content:end;margin:5px">
                         <button onclick="openvideo('${file.file_code}')" class="btn waves waves-effect pink">Nonton</button>
                       </div>
                     </div>
@@ -220,19 +200,7 @@
     }
 
     // Add this script at the end of your body tag or in a separate script file
-document.addEventListener('DOMContentLoaded', function() {
-  var overlayAds = document.querySelector('.overlayads');
-  var clickCount = 0;
 
-  overlayAds.addEventListener('click', function() {
-    clickCount++;
-    if (clickCount === 4) {
-      overlayAds.style.display = 'none';
-      clickCount = 0
-    }
-    window.open(directlink_url,"_blank")
-  });
-});
 
   var link = document.getElementById('myLink');
   link.href = "/p.html?id=" + id  ;
