--- a/cari.html
+++ b/cari.html
@@ -29,9 +29,9 @@
      <a href="index.html"
   class="btn waves waves-effect pink" 
   >kembali</a>
-   <a href="cari.html"
-  class="btn waves waves-effect purple" 
-  >Cari Video</a>
+   <a href="simpan.html"
+  class="btn waves waves-effect blue" 
+  >Video tersimpan</a>
   </div>
 
   <div class="container">
@@ -141,6 +141,8 @@
                       <span class="pink-text darken-3 bold-text">${truncateText(result.title,40)}</span>
                     </div>
                     <div style="display:flex;justify-content:end;margin:5px">
+                      <button onclick="savelocal('${encodeURIComponent(JSON.stringify(result))}')" class="btn waves waves-effect blue">Simpan</button>
+               
                       <button onclick="openvideo('${result.file_code}')" class="btn waves waves-effect pink">Nonton</button>
                     </div>
                   </div>
