--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <link rel="stylesheet" href="global.css">
- 
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <style>
     .card-image img {
       height: 200px; 
@@ -27,9 +28,9 @@
   </h5>
 
   <div class="container">
-     <a href="index.html"
+     <a href="simpan.html"
   class="btn waves waves-effect pink" 
-  >kembali</a>
+  >Tersimpan</a>
    <a href="cari.html"
   class="btn waves waves-effect purple" 
   >Cari Video</a>
@@ -60,7 +61,7 @@
         </div>
       </div>
       </div>
-      <h6 style="font-weight: bold;text-align: center;">Sedang Mencari Video.....</h6>
+      <h6 style="font-weight: bold;text-align: center;">Sedang Mencari Video... <br>Refres web kalo lama</h6>
     </div>
 
   <!-- Container for Cards -->
@@ -122,7 +123,9 @@
                       <div class="container">
                         <span class="pink-text darken-3 bold-text">${truncatedTitle}</span>
                       </div>
-                      <div style="display:flex;justify-content:end;margin:5px">
+                      <div style="display:flex;justify-content:space-between;margin:5px">
+                       <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn waves waves-effect blue">Simpan</button>
+               
                        <button onclick="openvideo('${file.file_code}')" class="btn waves waves-effect pink">Nonton</button>
                       </div>
                     </div>
