--- a/p.html
+++ b/p.html
@@ -33,6 +33,11 @@
   >Request</a>
  </div>
 
+<div class="container">
+    <a href="simpan.html"
+  class="btn waves waves-effect blue" 
+  >Video tersimpan</a>
+</div>
 
 
   <div id="loadingframe" style="display: block;">
@@ -161,7 +166,9 @@
                       <div class="container">
                         <span class="pink-text darken-3 bold-text">${truncatedTitle}</span>
                       </div>
-                      <div style="display:flex;justify-content:end;margin:5px">
+                      <div style="display:flex;justify-content:space-between;margin:5px">
+                        <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn waves waves-effect blue">Simpan</button>
+               
                         <button onclick="openvideo('${file.file_code}')" class="btn waves waves-effect pink">Nonton</button>
                       </div>
                     </div>
