--- a/p.html
+++ b/p.html
@@ -120,7 +120,7 @@
     if (id) {
       var iframe = document.getElementById('myIframe');
       var download_url = document.getElementById('urldownload');
-      iframe.src = "https://9xplayer.com/?url=" + frame_domain + "/e/" + id;
+      iframe.src =  frame_domain + "/e/" + id;
       download_url.href = shortlink_domain + shortlink_token + shortlink_tujuan +  frame_domain + "/d/" + id;
     }
 
