--- a/p.html
+++ b/p.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="global.css">
   <script src="config.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<style>
- 
-</style>
+
+
+   <script src="js/jejakmu.js"></script>
+
 </head>
 <body>
 
@@ -39,6 +40,8 @@
   >Video tersimpan</a>
 </div>
 
+<div id="jejakmucounter"></div>
+
 
   <div id="loadingframe" style="display: block;">
     <h6 style="text-align: center;font-weight: bold;"> Sedang Mencari Video bentar bos...</h6>
@@ -58,6 +61,9 @@
     class="btn waves waves-effect pink bold-text" 
     >Download Video </a>
     <p class="center-align bold-text red-text">Lewatin Iklan shortlink kalo mau Download Video</p>
+
+    <div id="jejakdownload"></div>
+  
   </div>
 
 
@@ -98,6 +104,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
 
+    window.onload = function() {
+        Jejakmu_check(); 
+        Jejakmu_download() 
+    };
 
     function hideLoadingFrame() {
       const loadingFrame = document.getElementById('loadingframe');
@@ -117,6 +127,9 @@
 
     // Mengganti src dari iframe dengan nilai id
     if (id) {
+      Jejakmu_counter(id)
+
+
       var iframe = document.getElementById('myIframe');
       var download_url = document.getElementById('urldownload');
       iframe.src =  frame_domain + "/e/" + id;
