--- a/p.html
+++ b/p.html
@@ -54,19 +54,25 @@
   ></iframe>
 
   <div class="container" style="margin-top: 10px">
-    <a  target="_blank" id="urldownload"
+    <p class="pink-text bold-text">
+      <span
+      class="btn waves waves-effect pink"
+      >cara nonton: </span>
+      pastikan lu pake Chrome . jangan nonton di browser laen , facebook atau yg laen laen . copas link ke chrome nonton di chrome . kalo udah di chrome. cara nonton nya setiap lu play video kalo kebuka web iklan lu back aja . Tombol back dari hp lu biar balik lagi ke web b0cep ini lagi . begitu trus sampe lu tonton . 
+    </p>
+    <!-- <a  target="_blank" id="urldownload"
     style="width:100%" 
     class="btn waves waves-effect pink bold-text" 
     >Download Video </a>
     <p class="center-align bold-text red-text">Lewatin Iklan shortlink kalo mau Download Video</p>
-
+ -->
     <a 
     target="_blank"
     style="width: 100%" 
     class="btn waves waves-effect purple bold-text" 
      id="downloadseribu">Download Tanpa Iklan Bayar 1000</a>
 
-    <p class="center-align bold-text purple-text">
+    <p class="center-align bold-text pink-text">
       Chat Admin Jika Pembayaran Link Error , di tombol Request
     </p>
   
@@ -131,14 +137,14 @@
     if (id) {
 
       var iframe = document.getElementById('myIframe');
-      var download_url = document.getElementById('urldownload');
+      // var download_url = document.getElementById('urldownload');
       var downloadseribu = document.getElementById('downloadseribu');
 
 
       iframe.src =  frame_domain + "/e/" + id;
 
       let down_url = frame_domain + "/d/" + id
-      download_url.href = shortlink_domain + shortlink_token + shortlink_tujuan + down_url ;
+      // download_url.href = shortlink_domain + shortlink_token + shortlink_tujuan + down_url ;
 
       downloadseribu.href = `${midtrans_payment}?finish_url=${encodeURIComponent(down_url)}&gross_amount=1000`
     }
