--- a/terbaru.html
+++ b/terbaru.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       </div>
-      <h6 style="font-weight: bold;text-align: center;">Sedang Mencari Video.....</h6>
+      <h6 style="font-weight: bold;text-align: center;">Sedang Mencari Video.... <br>Refresh web kalo lama</h6>
     </div>
 
   <!-- Container for Cards -->
