--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Navbar -->
   <h5 class="black darken-3 bold-text white-text z-depth-3"
   style="margin-top: 0px; padding: 5px; text-align: center;">
-  Saepul Ganteng
+  Dion Ganteng
   </h5>
 
   <div class="container">
