--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bang Ipul</title>
+  <title>BOKEP 2025</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <link rel="stylesheet" href="global.css">
@@ -11,7 +11,7 @@
 
   <style>
     .card-image img {
-      height: 200px; 
+      height: 100px; 
       object-fit: cover;
     }
     .bold-text {
