--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="container">
      <a href="simpan.html"
-  class="btn btn-primary disabled" 
+  class="btn btn-warning waves-effect waves-light" 
   >Tersimpan</a>
    <a href="cari.html"
   class="btn waves waves-effect purple" 
