--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   class="btn btn-warning" 
   >Tersimpan</a>
    <a href="cari.html"
-  class="btn waves waves-effect purple" 
+  class="btn btn-light" 
   >Cari Video</a>
   <a href="chat.html"
-  class="btn waves waves-effect blue" 
+  class="btn btn-light" 
   >Request</a>
   </div>
    <div class="container" style="margin-top:10px">
      <a href="terbaru.html"
-  class="btn waves waves-effect green bold-text" 
+  class="btn btn-light" 
   >Terbaru Upload</a>
   </div>
 
