--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   BOKEP 2025
   </h5>
 
-  <div class="container">
+ <center> <div class="container">
      <a href="simpan.html"
   class="btn btn-warning" 
   >Tersimpan</a>
@@ -37,7 +37,7 @@
      <a href="terbaru.html"
   class="btn btn-light" 
   >Terbaru</a>
-  </div>
+  </div> </center>
 
 
     <!-- Container for Cards -->
