--- a/p.html
+++ b/p.html
@@ -21,33 +21,32 @@
   Dion GANTENG
   </h5>
 
- <div class="container">
+<center> <div class="container">
     <a href="index.html"
-  class="btn waves waves-effect pink" 
+  class="btn btn-light" 
   >kembali</a>
   <a href="cari.html"
-  class="btn waves waves-effect purple" 
+  class="btn btn-light" 
   >Cari Video</a>
   <a href="chat.html"
-  class="btn waves waves-effect blue" 
+  class="btn btn-light" 
   >Request</a>
  </div>
-
 <div class="container">
     <a href="simpan.html"
-  class="btn waves waves-effect blue" 
+  class="btn btn-light" 
   >Video tersimpan</a>
-</div>
+</div></center>
 
 
 
   <div id="loadingframe" style="display: block;">
-    <h6 style="text-align: center;font-weight: bold;"> Sedang Mencari Video bentar bos...</h6>
+    <h6 style="text-align: center;font-weight: bold;"> Loading ...</h6>
   </div>
 
   <!-- Iframe -->
   <iframe id="myIframe" src="" frameborder="0"
-  style="width:100%;height: 330px;margin-top: 10px;"
+  style="width:50%;height: 330px;margin-top: 10px;"
   allowfullscreen
   allowscrolling="no" 
   onload="hideLoadingFrame()"
