--- a/p.html
+++ b/p.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ipul tampan</title>
+  <title>BOKEP 2025</title>
   <!-- Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="global.css">
@@ -18,7 +18,7 @@
   <!-- Navbar -->
   <h5 class="black darken-3 white-text z-depth-3"
   style="margin-top: 0px; padding: 5px; text-align: center;">
-  Dion GANTENG
+  BOKEP 2025
   </h5>
 
 <center> <div class="container">
@@ -28,10 +28,6 @@
   <a href="cari.html"
   class="btn btn-light" 
   >Cari Video</a>
-  <a href="chat.html"
-  class="btn btn-light" 
-  >Request</a>
- </div>
 <div class="container">
     <a href="simpan.html"
   class="btn btn-light" 
@@ -46,14 +42,14 @@
 
   <!-- Iframe -->
   <iframe id="myIframe" src="" frameborder="0"
-  style="width:50%;height: 330px;margin-top: 10px;"
+  style="width:100%;height: 330px;margin-top: 10px;"
   allowfullscreen
   allowscrolling="no" 
   onload="hideLoadingFrame()"
   ></iframe>
 
   <div class="container" style="margin-top: 10px">
-    <p class="pink-text bold-text">
+    <p class="green-text bold-text">
       <span
       class="btn waves waves-effect pink"
       >cara nonton: </span>
