--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   </h5>
 
  <center> <div class="container">
+   <a href="index.html"
+  class="btn btn-light" 
+  >kembali</a>
      <a href="simpan.html"
   class="btn btn-warning" 
   >Tersimpan</a>
