--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
   </h5>
 
  <center> <div class="container">
-   <a href="index.html"
-  class="btn btn-light" 
-  >kembali</a>
+   
      <a href="simpan.html"
   class="btn btn-warning" 
   >Tersimpan</a>
@@ -115,16 +113,16 @@
                     <div class="card waves waves-effect">
                       <div >
                         <img
-                        style="width:50%"
+                        style="width:90%"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
                       <div class="container">
-                        <span class="pink-text darken-3 bold-text">${truncatedTitle}</span>
+                        <span class="black-text darken-3 bold-text">${truncatedTitle}</span>
                       </div>
                       <div style="display:flex;justify-content:space-between;margin:5px">
-                       <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn waves waves-effect blue">Simpan</button>
+                       <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn btn-light">Simpan</button>
                
-                       <button onclick="openvideo('${file.file_code}')" class="btn waves waves-effect pink">Nonton</button>
+                       <button onclick="openvideo('${file.file_code}')" class="btn waves waves-effect red">Nonton</button>
                       </div>
                     </div>
                   </div>
