--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                          src="${file.single_img}" alt="${file.title}">
                       </div>
                       <div class="container">
-                        <span class="black-text darken-3 bold-text">${truncatedTitle}</span>
+                        <span class="fs-6">${truncatedTitle}</span>
                       </div>
                       <div style="display:flex;justify-content:space-between;margin:5px">
                        <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn btn-light">Simpan</button>
