--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     .card-image img {
-      height: 100px; 
+      height: 200px; 
       object-fit: cover;
     }
     .bold-text {
@@ -113,7 +113,7 @@
                     <div class="card waves waves-effect">
                       <div >
                         <img
-                        style="width:90%"
+                        style="width:90% hight:50%"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
                       <div class="container">
