--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                     <div class="card waves waves-effect">
                       <div >
                         <img
-                        
+                        style="width: 500px;
+  height: 300px;"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
                       <div class="container">
