--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                     <div class="card waves waves-effect">
                       <div >
                         <img
-                        style="width: 50%;
-  height: auto;"
+                        style="width: 100%"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
                       <div class="container">
