--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       </div>
-      <h6 style="font-weight: bold;text-align: center;">Sedang Mencari Video... <br>Refres web kalo lama</h6>
+      <h6 style="font-weight: bold;text-align: center;">Loading</h6>
     </div>
 
   <!-- Container for Cards -->
