--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- Container for Cards -->
     <div id="preloader" style="margin-top:30px">
       
+      <div bgcolor="black">
       <div style="display: flex;justify-content: center;">
         <div  class="preloader-wrapper big active">
         <div class="spinner-layer spinner-red-only">
