--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <!-- Container for Cards -->
     <div id="preloader" style="margin-top:30px">
       
-      <div bgcolor="black">
-      <div style="display: flex;justify-content: center;">
+    
+      <div style="display: flex;justify-content: center;bgcolor="black;">
         <div  class="preloader-wrapper big active">
         <div class="spinner-layer spinner-red-only">
           <div class="circle-clipper left">
