--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                       <div class="container">
                         <span class="fs-6">${truncatedTitle}</span>
                       </div>
-                      <div style="display:flex;justify-content:space-between;margin:5px; bgcolor:#000;">
+                      <div style="display:flex;justify-content:space-between;margin:5px; bgcolor="black">
                        <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn btn-light">Simpan</button>
                
                        <button onclick="openvideo('${file.file_code}')" class="btn waves waves-effect red">Nonton</button>
