--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
 
     <!-- Container for Cards -->
-    <div id="preloader" style="margin-top:90px">
+    <div id="preloader" style="margin-top:30px">
       
     
-      <div style="display: flex;justify-content: center;">
+      <div style="display: flex;justify-content: center; background-color:#000;">
         <div  class="preloader-wrapper big active">
         <div class="spinner-layer spinner-red-only">
           <div class="circle-clipper left">
