--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 const truncatedTitle = truncateText(file.title, 40);
                 const cardHtml = `
                   <div class="col s6 m3 l3">
-                  <div class="card" style="background: #000;">
+                  <div class="style="background: #000;">
                     <div class="card waves waves-effect">
                       <div >
                         <img
