--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
               files.forEach(file => {
                 const truncatedTitle = truncateText(file.title, 40);
                 const cardHtml = `
-                  <div class="col s6 m3 l3">
-                  <div class="style="background: #000;">
+                  <div class="col m1 grey center">
                     <div class="card waves waves-effect">
                       <div >
                         <img
