--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               files.forEach(file => {
                 const truncatedTitle = truncateText(file.title, 40);
                 const cardHtml = `
-                  <div class="col m1 grey center">
+                  <div class="col s4 m8 l9 grey">
                     <div class="card waves waves-effect">
                       <div >
                         <img
