--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               files.forEach(file => {
                 const truncatedTitle = truncateText(file.title, 40);
                 const cardHtml = `
-                  <div class="col s6 m3 l3 red">
+                  <div class="col s6 m3 l3 black">
                     <div class="card waves waves-effect">
                       <div >
                         <img
