--- a/index.html
+++ b/index.html
@@ -112,15 +112,14 @@
               files.forEach(file => {
                 const truncatedTitle = truncateText(file.title, 40);
                 const cardHtml = `
-                  <div class="col s8 m3 l3 black">
-                 <div class="card waves waves-effect">
+                  <div class="col s6 m3 l3 black">                <div class="card waves waves-effect">
                       <div >
                         <img
                         style="width: 100%"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
                       <div class="container">
-                        <span class="fs-6">${truncatedTitle}</span>
+                        <span class="fs-6;background-color:#000;">${truncatedTitle}</span>
                       </div>
                       <div style="display:flex;justify-content:space-between;margin:5px;">
                        <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn btn-light">Simpan</button>
