--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                         style="width: 100%"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
-                      <div class="container">
-                        <span class="fs-6;background-color:#000;">${truncatedTitle}</span>
+                      <div class="w3-container w3-red">
+                        <span class="fs-6;">${truncatedTitle}</span>
                       </div>
                       <div style="display:flex;justify-content:space-between;margin:5px;">
                        <button onclick="savelocal('${encodeURIComponent(JSON.stringify(file))}')" class="btn btn-light">Simpan</button>
