--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         style="width: 100%"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
-                      <div class="container-sm">
+                      <div class="container bg-dark">
                         <span class="fs-6;">${truncatedTitle}</span>
                       </div>
                       <div style="display:flex;justify-content:space-between;margin:5px;">
