--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- Container for Cards -->
   <div >
-    <div class="row" id="cards-container">
+    <div class="row" id="cards-container bg-dark">
       <!-- Cards will be inserted here dynamically -->
     </div>
   </div>
@@ -118,7 +118,7 @@
                         style="width: 100%"
                          src="${file.single_img}" alt="${file.title}">
                       </div>
-                      <div class="container bg-dark">
+                      <div class="container">
                         <span class="fs-6;">${truncatedTitle}</span>
                       </div>
                       <div style="display:flex;justify-content:space-between;margin:5px;">
