--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- Container for Cards -->
   <div >
-    <div class="row" id="cards-container bg-dark">
+    <div class="row" id="cards-container style="background-color:#000;">
       <!-- Cards will be inserted here dynamically -->
     </div>
   </div>
