--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="preloader" style="margin-top:30px">
       
     
-      <div style="display: flex;justify-content: center;">
+      <div style="display: flex;justify-content: center;background-color:#000;">
         <div  class="preloader-wrapper big active">
         <div class="spinner-layer spinner-red-only">
           <div class="circle-clipper left">
@@ -65,7 +65,7 @@
 
   <!-- Container for Cards -->
   <div >
-    <div class="row" id="cards-container style="background-color:#000;">
+    <div class="row" id="cards-container">
       <!-- Cards will be inserted here dynamically -->
     </div>
   </div>
