--- a/p.html
+++ b/p.html
@@ -20,7 +20,7 @@
   style="margin-top: 0px; padding: 5px; text-align: center;">
   BOKEP 2025
   </h5>
-
+  <body bgcolor="black">
 <center> <div class="container">
     <a href="index.html"
   class="btn btn-light" 
